--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,90 @@
     padding: 0;
     margin: 0;
 }
+
+.nav-bar{
+    
+    display: flex;
+    width: 100%;
+    background-color: #0084FD;
+}
+
+ .menu{
+    justify-content: flex-end;
+}
+
+.container{
+    margin: 0 auto;
+    width: 100%;
+    
+   
+}
+
+.card{
+    margin: 1rem auto;
+    border-radius: 30px;
+    width: 90%;
+}
+
+
+.big{
+    
+    background-color: blueviolet;
+}
+
+.little{
+    background-color: blue;
+}
+
+
+.due-col{
+    background-color: #9792E4;
+}
+
+.col{
+  border-radius: 30px;
+  margin: 0 auto;
+  background-color: white;  
+  width: 90%;
+}
+
+.testimonial{
+    text-align: center;
+    background-color: aqua;
+}
+
+.card-testimonial{
+    margin-top: 0 auto;
+    border-radius: 30px;
+    background-color: #9792E4;
+    color: white;
+}
+
+.benefits{
+    background-color: #9792E4;
+}
+
+.card-benefits{
+    margin: 0 auto;
+    background-color: white;
+    border-radius: 30px;
+    width: 90%;
+    color: #9792E4;
+
+}
+
+.about-us{
+    padding: 0 1rem;
+    background-color: aliceblue;
+    border-radius: 30px;
+    margin: 1rem auto;
+}
+
+.get-started{
+    background-color: aqua;
+}
+
+.footer{
+    background-color:grey;
+    color: white;
+}
