--- a/css/style.css
+++ b/css/style.css
@@ -2,24 +2,30 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: sans-serif;
 }
-
+/* nav bar */
 .nav-bar{
-    
     display: flex;
     width: 100%;
     background-color: #0084FD;
 }
-
- .fa-bars{
-    justify-content: flex-end;
+.nav-bar img{
+    width: 70%;
+    padding: 0.7rem;
+}
+.fa-bars{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    color: white;
+    align-items: center;
 }
 
+/* common */
 .container{
     margin: 0 auto;
     width: 100%;
-    
-   
 }
 
 .card{
@@ -28,17 +34,56 @@
     width: 90%;
 }
 
+h4{
+    margin-bottom: 1rem;
+    color:#0084FD ;
+}
 
+strong{
+    color: #5A6E7F;
+    font-size: 13px;
+    margin-bottom: 1rem;
+}
+
+button{
+    border-radius: 30px;
+    border-style:none;
+    background-color: #0084FD;
+    padding: 0.5rem;
+    width: 80%;
+    color: white;
+    margin-bottom: 1rem;
+   
+}
+
+/* card prima sezione */
+/* big card */
 .big{
-    
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 1rem 0 1rem;
     background-color: #B5DDFF;
+    
 }
-
+.big img{
+    width: 100%;
+}
+/* little card */
 .little{
-    background-color: #B5DDFF
+    text-align: center;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    background-color: #B5DDFF;
+    align-items: center;
 }
-
-
+.fa-solid{
+    color:#0084FD;
+    font-size: 45px;
+    padding: 1rem;
+    
+}
+/* seconda sezion */
 .due-col{
     background-color: #9792E4;
 }
@@ -46,13 +91,13 @@
 .col{
   border-radius: 30px;
   margin: 0 auto;
-  background-color: white;  
+  background-color: white;
   width: 90%;
 }
-
+/* testimonial */
 .testimonial{
     text-align: center;
-    
+
 }
 
 .card-testimonial{
@@ -61,7 +106,7 @@
     background-color: #9792E4;
     color: white;
 }
-
+/* benefits */
 .benefits{
     background-color: #9792E4;
 }
@@ -74,18 +119,18 @@
     color: #9792E4;
 
 }
-
+/* about us */
 .about-us{
     padding: 0 1rem;
     background-color: aliceblue;
     border-radius: 30px;
     margin: 1rem auto;
 }
-
+/* get started */
 .get-started{
     background-color: #9792E4;
 }
-
+/* footer */
 .footer{
     background-color:#333333;
     color: white;
