--- a/css/style.css
+++ b/css/style.css
@@ -84,54 +84,226 @@ button{
     
 }
 /* seconda sezion */
+
+.first img{
+    padding-top: 2rem;
+    width: 100%;
+}
+
+.first{
+    color: white;
+    
+    
+}
+
+.first p{
+    padding: 2rem 0;
+}
+
 .due-col{
+   background-color: #9792E4;
+   padding:1rem;
+   
+}
+
+.second{
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  background-color: white;
+  border-radius: 30px;
+  margin: 0 auto;
+  width: 90%;
+  text-align: center;
+  align-items: center;
+  
+}
+
+.second img{
+    width: 100%;
+    padding-bottom: 2rem;
+}
+
+.fa-arrow-down{
+    color: black;
+    font-size: 20px;
+}
+
+.button{
+    margin-top:1rem ;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 0.7rem;
+    border-radius:50% ;
+    width:50px;
+    height: 50px;
     background-color: #9792E4;
 }
 
-.col{
-  border-radius: 30px;
-  margin: 0 auto;
-  background-color: white;
-  width: 90%;
-}
 /* testimonial */
 .testimonial{
+    padding: 1rem;
     text-align: center;
-
+}
+h6{
+    padding: 2rem;
+}
+h2{
+    color: #9792E4;
 }
 
+.testimonial p{
+    padding: 1rem 0;
+    
+}
 .card-testimonial{
-    margin-top: 0 auto;
+    padding-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    margin: 1rem 0;
     border-radius: 30px;
     background-color: #9792E4;
     color: white;
+    align-items: center
+}
+.img-testimonial{
+    
+    border-radius:50% ;
+    width:150px;
+    height: 150px;
+    
+}
+.card-testimonial img{
+    border-radius: 50%;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 /* benefits */
 .benefits{
+    padding: 1rem;
     background-color: #9792E4;
 }
 
+h3{
+    color: white;
+    text-align: center;
+}
 .card-benefits{
-    margin: 0 auto;
+    padding: 1rem;
+    margin: 1rem auto;
     background-color: white;
-    border-radius: 30px;
+    border-radius: 10px;
     width: 90%;
     color: #9792E4;
+}
 
+.card-benefits strong{
+    color: #9792E4;
+}
+
+.card-benefits p{
+    color: #5A6E7F;
+    padding: 1rem 0;
+}
+
+.card-benefits h2 {
+    padding: 1rem 0;
+}
+
+.card-benefits button{
+    width: 50%;
+    background-color: #9792E4;
 }
 /* about us */
 .about-us{
     padding: 0 1rem;
-    background-color: aliceblue;
-    border-radius: 30px;
     margin: 1rem auto;
+}
+.about-us h1{
+    color: #9792E4;
+    padding:1rem 0;
+}
+
+.about-us p{
+    line-height: 1.5rem;
+    padding: 1rem 0;
+}
+.cit-img{
+    padding-left: 1rem;
+    position: relative;
+}
+.fa-quote-left{
+    position: absolute;
+    top: 0;
+    left: 40%;
+    color: #9792E4;
+}
+
+.cit-img img{
+    margin-left:1rem;
+    margin-bottom: 1rem;
+}
+
+.cit-img strong{
+    display: block;
+    font-size: 20px;
+    padding-right: 2rem;
+    color: #9792E4;
+}
+
+.cit-img button{
+    width: 60%;
+ background-color: #9792E4;
+ ma
 }
 /* get started */
 .get-started{
+    padding: 1rem;
     background-color: #9792E4;
+    text-align: center;
+    line-height: 1.5rem;
 }
+.get-started h1{
+    color: orange;
+    padding-bottom: 1rem;
+}
+.get-started a{
+    color: #5A6E7F;
+}
+
+.get-started p{
+    color: white;
+}
+.get-started button{
+    margin: 1rem;
+    background-color: white;
+    color: #9792E4;
+    width: 70%;
+    padding: 1rem;
+}
+.get-started h4{
+    color: white;
+    font-size: 20px;
+    padding: 1rem;
+}
+.copy {
+    color: white;
+    font-size: 10px;
+}
+
 /* footer */
 .footer{
     background-color:#333333;
     color: white;
+}
+
+.footer p{
+    text-align: center;
+    font-size: 10px;
+    padding: 2rem;
+}
+
+.footer a {
+    color: #9792E4;
 }
