--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,13 @@
 .container{
     margin: 0 auto;
     width: 100%;
+    padding: 1rem;
 }
 
 .card{
     margin: 1rem auto;
     border-radius: 30px;
-    width: 90%;
+    width: 100%;
 }
 
 h4{
@@ -50,7 +51,7 @@ button{
     border-style:none;
     background-color: #0084FD;
     padding: 0.5rem;
-    width: 80%;
+    width: 10rem;
     color: white;
     margin-bottom: 1rem;
    
@@ -83,7 +84,12 @@ button{
     padding: 1rem;
     
 }
-/* seconda sezion */
+/* due colonne */
+
+.first h3{
+    font-size: 30px;
+    text-align: start;
+}
 
 .first img{
     padding-top: 2rem;
@@ -92,8 +98,6 @@ button{
 
 .first{
     color: white;
-    
-    
 }
 
 .first p{
@@ -176,18 +180,21 @@ h2{
 .card-testimonial img{
     border-radius: 50%;
     object-fit: cover;
-    width: 100%;
-    height: 100%;
+    width: 150px;
+    height: 150px;
 }
 /* benefits */
 .benefits{
+    display: block;
     padding: 1rem;
     background-color: #9792E4;
 }
 
-h3{
-    color: white;
+.name{
+     color: white;
     text-align: center;
+    margin: 1rem;
+    width: 100%;
 }
 .card-benefits{
     padding: 1rem;
@@ -307,3 +314,80 @@ h3{
 .footer a {
     color: #9792E4;
 }
+
+/* media query */
+
+/* jumbo e card */
+@media screen and (min-width:480px){
+.jumbotron{
+    display: flex;   
+    width:100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 1rem;
+} 
+}
+    
+@media screen and (min-width:480px) {
+    .big {
+        width: 65%;
+        display: flex;
+        flex-wrap: wrap
+        
+    };
+}
+
+@media screen and ( min-width:480px) {
+    .little{
+        width:33%;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (min-width: 480px){
+   .big img{
+    width:60%; 
+    }
+}
+/* testimonial */
+
+@media screen and (min-width: 480px){
+    .card-testimonial{
+    display: flex;
+    flex-direction: row;
+    padding: 1rem;
+    }
+ }
+ @media screen and (min-width: 480px){
+    .name{
+    display: block;
+    width: 100%;
+    }
+ }
+ 
+ /* working with us */
+@media screen and (min-width:480px) {
+    .benefits{
+        justify-content: center; 
+        display: flex;  
+        flex-wrap: wrap;
+    }
+}
+/*  benefits */
+@media screen and (min-width:480px){
+    .card-benefits{
+       
+        width: 45%;
+    }
+    
+}
+
+@media screen and (min-width:480px){
+    .info{
+        display: flex;
+        width: calc(100 / 2 );
+
+    }
+}
+
